--- a/entetes.tex
+++ b/entetes.tex
@@ -47,7 +47,7 @@
 {\bf \fontspec{Gill Sans Light} Rapport de projet - Compilateur vérifié en Coq}
 \end{tabular}\\\vspace*{3.1mm}
 \str{0.9}\begin{tabular}{@{}l@{}}
-{\fontsize{10pt}{12pt}\selectfont \fontspec{Gill Sans Light} Dorian Nogneng}\\{\fontsize{10pt}{12pt}\selectfont \fontspec{Gill Sans Light}  Quentin Fiard}
+{\selectfont \fontspec{Gill Sans Light} Dorian Nogneng}\\{\selectfont \fontspec{Gill Sans Light}  Quentin Fiard}
 \end{tabular}
 \vspace*{\headbottommargin}
 \begin{textblock}{5}(12,8)
@@ -66,7 +66,7 @@
 {\bf \fontspec{Gill Sans Light} Rapport de projet - Compilateur vérifié en Coq}
 \end{tabular}\\\vspace*{3.1mm}
 \str{0.9}\begin{tabular}{@{}l@{}}
-{\fontsize{10pt}{12pt}\selectfont \fontspec{Gill Sans Light} Dorian Nogneng}\\{\fontsize{10pt}{12pt}\selectfont \fontspec{Gill Sans Light}  Quentin Fiard}
+{\selectfont \fontspec{Gill Sans Light} Dorian Nogneng}\\{\selectfont \fontspec{Gill Sans Light}  Quentin Fiard}
 \end{tabular}
 \vspace*{\headbottommargin}
 \begin{textblock}{5}(6,8)
