--- a/entetes.tex
+++ b/entetes.tex
@@ -43,11 +43,17 @@
 \small
 \str{0.9}
 \begin{tabular}{@{}l@{}}
-{\bf \fontspec{Gill Sans Light} INF551 - Raisonnement assisté par ordinateur}\\
-{\bf \fontspec{Gill Sans Light} Rapport de projet - Compilateur vérifié en Coq}
+{\bf %\fontspec{Gill Sans Light}
+INF551 - Raisonnement assisté par ordinateur}\\
+{\bf
+%\fontspec{Gill Sans Light}
+Rapport de projet - Compilateur vérifié en Coq}
 \end{tabular}\\\vspace*{3.1mm}
 \str{0.9}\begin{tabular}{@{}l@{}}
-{\selectfont \fontspec{Gill Sans Light} Dorian Nogneng}\\{\selectfont \fontspec{Gill Sans Light}  Quentin Fiard}
+{\selectfont
+%\fontspec{Gill Sans Light}
+Dorian Nogneng}\\{\selectfont %\fontspec{Gill Sans Light}
+Quentin Fiard}
 \end{tabular}
 \vspace*{\headbottommargin}
 \begin{textblock}{5}(12,8)
@@ -62,11 +68,17 @@
 \small
 \str{0.9}
 \begin{tabular}{@{}l@{}}
-{\bf \fontspec{Gill Sans Light} INF551 - Raisonnement assisté par ordinateur}\\
-{\bf \fontspec{Gill Sans Light} Rapport de projet - Compilateur vérifié en Coq}
+{\bf %\fontspec{Gill Sans Light}
+INF551 - Raisonnement assisté par ordinateur}\\
+{\bf
+%\fontspec{Gill Sans Light}
+Rapport de projet - Compilateur vérifié en Coq}
 \end{tabular}\\\vspace*{3.1mm}
 \str{0.9}\begin{tabular}{@{}l@{}}
-{\selectfont \fontspec{Gill Sans Light} Dorian Nogneng}\\{\selectfont \fontspec{Gill Sans Light}  Quentin Fiard}
+{\selectfont
+%\fontspec{Gill Sans Light}
+Dorian Nogneng}\\{\selectfont %\fontspec{Gill Sans Light}
+Quentin Fiard}
 \end{tabular}
 \vspace*{\headbottommargin}
 \begin{textblock}{5}(6,8)
