--- a/rapport.tex
+++ b/rapport.tex
@@ -214,8 +214,8 @@ En conclusion, ce projet nous a permis d'implémenter un compilateur traduisant 
 \end{paragraph}
 \end{conclusion}
 
-\glsaddall
-\printglossary[title={Glossaire\markright{GLOSSAIRE}}]
-\addcontentsline{toc}{section}{Glossaire}
+%\glsaddall
+%\printglossary[title={Glossaire\markright{GLOSSAIRE}}]
+%\addcontentsline{toc}{section}{Glossaire}
 
 \end{document}
